# csp

./: .bumpversion.cfg  .clang-format  .gitattributes  .gitignore  .mypy-stubtest.ini  .stubtest-allowlist  Brewfile  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  dev-environment-win.yml  dev-environment.yml  pyproject.toml  setup.py  test_new_type_checking.py  test_none_output.py  vcpkg.json
cpp/csp/adapters/arrow/: ArrowFieldReader.cpp  ArrowFieldReader.h  ArrowFieldWriter.cpp  ArrowFieldWriter.h  ArrowTypeVisitor.h  CMakeLists.txt  ColumnDispatcher.cpp  ColumnDispatcher.h  RecordBatchRowProcessor.cpp  RecordBatchRowProcessor.h  RecordBatchToStruct.cpp  RecordBatchToStruct.h  StructToRecordBatch.cpp  StructToRecordBatch.h
cpp/csp/adapters/kafka/: CMakeLists.txt  KafkaAdapterManager.cpp  KafkaAdapterManager.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaInputAdapter.cpp  KafkaInputAdapter.h  KafkaOutputAdapter.cpp  KafkaOutputAdapter.h  KafkaPublisher.cpp  KafkaPublisher.h  KafkaSubscriber.cpp  KafkaSubscriber.h
cpp/csp/adapters/parquet/: ArrowBackedArrayBuilder.cpp  ArrowBackedArrayBuilder.h  ArrowIPCFileReaderWrapper.cpp  ArrowIPCFileReaderWrapper.h  ArrowIPCFileWriterWrapper.cpp  ArrowIPCFileWriterWrapper.h  ArrowSingleColumnArrayBuilder.h  CMakeLists.txt  DialectGenericListReaderInterface.h  DialectGenericListWriterInterface.h  FileNameGeneratorReplicator.h  FileReaderWrapper.cpp  FileReaderWrapper.h  FileWriterWrapper.cpp  FileWriterWrapper.h  FileWriterWrapperContainer.cpp  FileWriterWrapperContainer.h  ParquetDictBasketOutputWriter.cpp  ParquetDictBasketOutputWriter.h  ParquetFileReaderWrapper.cpp  ParquetFileReaderWrapper.h  ParquetFileWriterWrapper.cpp  ParquetFileWriterWrapper.h  ParquetInputAdapterManager.cpp  ParquetInputAdapterManager.h  ParquetOutputAdapter.cpp  ParquetOutputAdapter.h  ParquetOutputAdapterManager.cpp  ParquetOutputAdapterManager.h  ParquetOutputFilenameAdapter.cpp  ParquetOutputFilenameAdapter.h  ParquetReader.cpp  ParquetReader.h  ParquetReaderColumnAdapter.cpp  ParquetReaderColumnAdapter.h  ParquetStatusUtils.h  ParquetWriter.cpp  ParquetWriter.h  RecordBatchFileSink.cpp  RecordBatchFileSink.h  (+3 more)
cpp/csp/adapters/redis/: CMakeLists.txt  RedisAdapterManager.cpp  RedisAdapterManager.h  RedisInputAdapter.h  RedisOutputAdapter.h
cpp/csp/adapters/utils/: AvroIncludes.h  AvroMessageStructConverter.cpp  AvroMessageStructConverter.h  AvroMessageWriter.h  CMakeLists.txt  FileUtils.h  JSONMessageStructConverter.cpp  JSONMessageStructConverter.h  JSONMessageWriter.h  MessageEnums.cpp  MessageEnums.h  MessageStructConverter.cpp  MessageStructConverter.h  MessageWriter.cpp  MessageWriter.h  ProtobufHelper.cpp  ProtobufHelper.h  ProtobufMessageStructConverter.cpp  ProtobufMessageStructConverter.h  RawBytesMessageStructConverter.cpp  RawBytesMessageStructConverter.h  StructAdapterInfo.h  ValueDispatcher.h
cpp/csp/adapters/websocket/: CMakeLists.txt  ClientAdapterManager.cpp  ClientAdapterManager.h  ClientConnectionRequestAdapter.cpp  ClientConnectionRequestAdapter.h  ClientHeaderUpdateAdapter.cpp  ClientHeaderUpdateAdapter.h  ClientInputAdapter.cpp  ClientInputAdapter.h  (+8 more)
cpp/csp/core/: BasicAllocator.h  CMakeLists.txt  Config.h.in  DynamicBitSet.h  Enum.h  EnumBitSet.h  Exception.cpp  Exception.h  Exports.h  FileUtils.h  Generator.h  Hash.h  Likely.h  Platform.h  QueueWaiter.h  SRMWLockFreeQueue.h  System.h  TaggedPointerUnion.h  Time.cpp  Time.h  meson.build
cpp/csp/cppnodes/: CMakeLists.txt  baselibimpl.cpp  basketlibimpl.cpp  mathimpl.cpp  statsimpl.cpp  statsimpl.h
cpp/csp/engine/: AdapterManager.cpp  AdapterManager.h  AdapterManagerExtern.cpp  AdapterManagerExtern.h  AlarmInputAdapter.h  BasketInfo.cpp  BasketInfo.h  CMakeLists.txt  ConstInputAdapter.h  Consumer.cpp  Consumer.h  CppNode.h  CspEnum.cpp  CspEnum.h  CspType.cpp  CspType.h  CycleStepTable.cpp  CycleStepTable.h  DialectGenericType.cpp  DialectGenericType.h  Dictionary.cpp  Dictionary.h  DictionaryExtern.cpp  DynamicEngine.cpp  DynamicEngine.h  DynamicNode.cpp  DynamicNode.h  Engine.cpp  Engine.h  Enums.cpp  Enums.h  EventPropagator.cpp  EventPropagator.h  Feedback.h  GraphOutputAdapter.cpp  GraphOutputAdapter.h  InputAdapter.cpp  InputAdapter.h  InputId.h  Node.cpp  (+36 more)
cpp/csp/python/: ArrowInputAdapter.h  CMakeLists.txt  Common.h  Conversions.cpp  Conversions.h  CspTypeFactory.cpp  CspTypeFactory.h  EngineConversions.cpp  EngineConversions.h  Exception.h  InitHelper.h  NumpyConversions.cpp  NumpyConversions.h  NumpyInputAdapter.h  PyAdapterManager.cpp  PyAdapterManager.h  PyAdapterManagerWrapper.cpp  PyAdapterManagerWrapper.h  PyArrowInputAdapter.cpp  PyBasketInputProxy.cpp  PyBasketInputProxy.h  PyBasketOutputProxy.cpp  PyBasketOutputProxy.h  PyCApiAdapters.cpp  PyConstAdapter.cpp  PyConstants.cpp  PyConstants.h  PyCppNode.cpp  PyCppNode.h  PyCspEnum.cpp  PyCspEnum.h  PyCspType.cpp  PyCspType.h  PyDialectGenericListsInterface.h  PyDynamicNode.cpp  PyEngine.cpp  PyEngine.h  PyEventLoop.cpp  PyEventLoop.h  PyFeedbackAdapter.cpp  (+48 more)
cpp/tests/: CMakeLists.txt
cpp/tests/core/: CMakeLists.txt  test_basic_allocator.cpp  test_dynamicbitset.cpp  test_enum.cpp  test_platform.cpp  test_srmwlockfreequeue.cpp  test_tagged_pointer_union.cpp  test_time.cpp
cpp/tests/engine/: CMakeLists.txt  test_dictionary.cpp  test_engine_initial.cpp  test_partial_switch_csp_type.cpp  test_tick_buffer.cpp  test_time_series.cpp  test_window_buffer.cpp
cpp/tests/extensions/: CMakeLists.txt
csp/examples/e_23_cpp_example/: CMakeLists.txt  csp  pyproject.toml  setup.py
examples/05_cpp/1_cpp_node/: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/05_cpp/2_cpp_node_with_struct/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  struct.cpp
examples/05_cpp/3_cpp_adapter/: CMakeLists.txt  README.md  pyproject.toml
examples/05_cpp/4_c_api_adapter/: CMakeLists.txt  README.md  pyproject.toml
examples/05_cpp/5_c_api_adapter_rust/: Cargo.toml  README.md  build.rs  pyproject.toml
examples/05_extensions/1_cpp_node/: CMakeLists.txt  piglatin.cpp  pyproject.toml
(+573 files in other folders)
