[build-system]
requires = [
    "cmake<3.27",
    "deprecated",  # Because used in csp.impl.struct, which is used in autogen
    # oldest numpy 2 we can
    "numpy>=2,<2.1; python_version < '3.13'",
    "numpy>=2,<2.2",
    "pyarrow>=15,<23",
    "ruamel.yaml",
    "scikit-build",
    "setuptools>=69,<74",
    "typing-extensions",
]
build-backend="setuptools.build_meta"

[project]
name = "csp"
authors = [{name = "the csp authors", email = "CSPOpenSource@point72.com"}]
description="csp is a high performance reactive stream processing library, written in C++ and Python"
readme = "README.md"
version = "0.13.2"
requires-python = ">=3.10"

dependencies = [
    "deprecated",
    "numpy>=1",
    "packaging",
    "pandas",
    "psutil",
    "pyarrow>=15,<23",
    "pydantic>=2",
    "pytz",
    "ruamel.yaml",
    "sqlalchemy",
    "typing-extensions",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/point72/csp"
Homepage = "https://github.com/Point72/csp"
Documentation = "https://github.com/Point72/csp/wiki"
Tracker = "https://github.com/point72/csp/issues"

[project.optional-dependencies]
develop = [
    # build/dist
    "bump-my-version",
    "build",
    "ruamel.yaml",
    "scikit-build",
    "twine",
    "wheel",
    # lint
    "codespell>=2.4,<2.5",
    "mdformat>=0.7.19,<0.8",
    "mdformat-tables>=1,<1.1",
    "ruff>=0.9,<0.15",
    # test
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    # showgraph
    "graphviz",
    "pillow",
    # adapters
    "httpx>=0.20,<1",  # kafka
    "perspective-python>=2",  # perspective
    "ipywidgets",  # perspective
    "polars",  # parquet
    "psutil",  # test_engine/test_history
    "sqlalchemy",  # db
    "threadpoolctl",  # test_random
    "tornado",  # profiler, perspective, websocket
    "python-rapidjson", # websocket
]
showgraph = [
    "graphviz",
    "pillow",
]
test = [
    "graphviz",
    "pillow",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    "httpx>=0.20,<1",
    "perspective-python",
    "polars",
    "psutil",
    "requests",
    "slack-sdk>=3",
    "sqlalchemy",
    "threadpoolctl",
    "tornado",
]
symphony = [
    "csp-adapter-symphony",
]
slack = [
    "csp-adapter-slack",
]

[tool.bumpversion]
current_version = "0.13.2"
commit = false
tag = false
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "csp/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "setup.py"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CMakeLists.txt"
search = 'project(csp VERSION "{current_version}")'
replace = 'project(csp VERSION "{new_version}")'

[tool.check-manifest]
ignore = []

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
test-command = "echo 'TODO'"
test-requires = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
]

[tool.cibuildwheel.linux]
before-all ="""
rpm --import https://repo.almalinux.org/almalinux/RPM-GPG-KEY-AlmaLinux &&
dnf config-manager --set-enabled powertools &&
dnf install epel-release -y &&
make dependencies-fedora
"""
environment = {CSP_MANYLINUX="ON"}
repair-wheel-command = "auditwheel -v show {wheel} && LD_LIBRARY_PATH=/project/csp/lib auditwheel -v repair -w {dest_dir} {wheel}"
skip = "*i686 musllinux*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
before-all ="""
make dependencies-mac
export ACLOCAL_PATH="$(brew --prefix autoconf-archive)/share/aclocal:$(printenv ACLOCAL_PATH)"
"""
archs = "arm64"

[tool.cibuildwheel.windows]
before-all = "make dependencies-win"
before-build = "make requirements"
archs = "AMD64"
skip = "*win32 *arm_64"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "csp/tests"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["csp"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"csp/impl/__*.py" = ["F401"]
"csp/tests/*.py" = ["F401", "F403", "F811", "F821", "F841", "F842", "E731", "E741"]
